--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@ash-player/firebase-cert": ["src/app/firebase.cert.json"],
       "@ash-player/config": ["src/app/app.config.json"],
       "@ash-player/service/*": ["src/app/services/*.service"],
-      "@ash-player/model/*": ["src/app/models/*.model"]
+      "@ash-player/model/*": ["src/app/models/*.model"],
+      "@ash-player/guard/*": ["src/app/guards/*.guard"]
     }
   },
   "angularCompilerOptions": {
