session flow is properly managed up to the point where host and members get connected to each other; added webchimera.js prebuilts (broken on macos, pending update); many other minor improvements

--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "dist/ash-player",
             "index": "src/index.html",
@@ -55,7 +55,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            }
           },
           "configurations": {
             "production": {
