fixed error handling of backend requests; invitations are no longer shown when user is in a session; left pane controls are properly managed outside of the controls component; source-select now also accepts drag and dropping a file with reactive styles; added dropzone directive

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@ash-player/config": ["src/app/app.config.json"],
       "@ash-player/service/*": ["src/app/services/*.service"],
       "@ash-player/model/*": ["src/app/models/*.model"],
-      "@ash-player/guard/*": ["src/app/guards/*.guard"]
+      "@ash-player/guard/*": ["src/app/guards/*.guard"],
+      "@ash-player/directive/*": ["src/app/directive/*.directive"]
     }
   },
   "angularCompilerOptions": {
